--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.0",
     "bootstrap-icons": "^1.11.3",
+    "firebase": "^11.6.0",
     "framer-motion": "^12.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5"
   },
